setup/cilium/cilium_policy.yaml
# This file allows all traffic to and in the bookinfo application.

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "bookinfo-l7-empty"
  namespace: bookinfo
spec:
  endpointSelector:
    matchLabels:
      "k8s:io.kubernetes.pod.namespace": bookinfo
  ingress:
  - fromEntities:
      - all
    toPorts:
    - ports:
      - port: "9080"
        protocol: TCP
  - fromEndpoints:
    - matchLabels: {}
    toPorts:
    - ports:
      - port: "9080"
        protocol: TCP
      rules:
        http: [{}]
