setup/cilium/cilium_policy_l4.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "bookinfo-l4"
  namespace: bookinfo
spec:
  endpointSelector:
    matchLabels:
      "k8s:io.kubernetes.pod.namespace": bookinfo
  ingress:
  - fromEndpoints:
    - matchLabels: {}
    toPorts:
    - ports:
      - port: "9080"
        protocol: TCP
